# Python-Project

./: README.md  finalreport.html  pyproject.toml  report.html  requirements.txt
python/: main.py  question_model.py  quiz.py  quiz_data.py  quiz_ui.py
